changing the structure of the wireless device struct
