# models/ble_characteristic.go
@@ -1,65 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-)
-
-// BleCharacteristic ble characteristic
-//
-// swagger:model ble_characteristic
-type BleCharacteristic struct {
-
-	// Access mode of characteristic, ReadWrite or ReadOnly
-	AccessMode string `json:"access_mode,omitempty"`
-
-	// unique identifier of characteristic
-	CharacteristicUUID string `json:"characteristic_uuid,omitempty"`
-
-	// Friendly name of the BLE characteristic.
-	Name string `json:"name,omitempty"`
-
-	// parent service uuid.
-	ServiceUUID string `json:"service_uuid,omitempty"`
-
-	// The unit of of characteristic.
-	Unit string `json:"unit,omitempty"`
-
-	// value transferred on this characteristic
-	Value string `json:"value,omitempty"`
-}
-
-// Validate validates this ble characteristic
-func (m *BleCharacteristic) Validate(formats strfmt.Registry) error {
-	return nil
-}
-
-// ContextValidate validates this ble characteristic based on context it is used
-func (m *BleCharacteristic) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *BleCharacteristic) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *BleCharacteristic) UnmarshalBinary(b []byte) error {
-	var res BleCharacteristic
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
